@@ -1002,7 +1002,7 @@ N
 V
 1 10 Q
 0 X
-(28 November 1994) 309 59.9 T
+(1 February 1995) 309 59.9 T
 2 12 Q
 (1) 552 59.9 T
 108 87.98 558 720 R
@@ -1130,7 +1130,7 @@ V
 0 X
 (2) 54 59.9 T
 1 10 Q
-( 28 November 1994) 252 59.9 T
+( 1 February 1995) 252 59.9 T
 54 87.98 504 720 R
 7 X
 V
@@ -1260,7 +1260,7 @@ N
 V
 1 10 Q
 0 X
-(28 November 1994) 309 59.9 T
+(1 February 1995) 309 59.9 T
 2 12 Q
 (3) 552 59.9 T
 108 87.98 558 720 R
@@ -1350,13 +1350,13 @@ V
 -0.11 (Y) 135 394.33 P
 -0.11 (ou can either print the two images separately and mount them side by side, or mer) 141.22 394.33 P
 -0.11 (ge them electronically) 467 394.33 P
--0.04 (before printing. I use the) 135 382.33 P
+-0.18 (before printing. I use the) 135 382.33 P
 5 F
--0.03 (montage) 235.85 382.33 P
+-0.17 (montage) 235.13 382.33 P
 4 F
--0.04 ( command of ImageMagick to combine the separate rastere images into) 270.01 382.33 P
-(a single double width image containing the stereo pair) 135 370.33 T
-(. Here is a to ImageMagick command which will) 350.97 370.33 T
+-0.18 ( command of ImageMagick to combine the separate raster images into a) 269.28 382.33 P
+(single double-width image containing the stereo pair) 135 370.33 T
+(. Here is an ImageMagick command which will) 344.86 370.33 T
 (combine a left and a right image, each 500x500 pixels, into a single stereo pair:) 135 358.33 T
 8 F
 (montage -geometry 500x500+0+0! -borderwidth 0 +frame -label \322\322 \134) 126 336.33 T
@@ -1367,8 +1367,12 @@ V
 (T records describe the identity) 421.16 303.33 T
 (matrix and another in which TMA) 135 291.33 T
 (T describes the shear matrix, then this procedure can be automated.) 271.3 291.33 T
-(Note that creating an empty \336le header) 135 279.33 T
-(.r3d will cause Molscript to produce an output \336le with no header) 289.89 279.33 T
+0 (Note that creating an empty \336le) 135 279.33 P
+6 F
+0 (header) 263.78 279.33 P
+0 (..r3d) 290.43 279.33 P
+4 F
+0 ( will cause Molscript to produce an output \336le with no header) 309.31 279.33 P
 (records. Here is a sample shell script:) 135 267.33 T
 8 F
 (#) 126 255.33 T
@@ -1421,7 +1425,7 @@ V
 0 X
 (4) 54 59.9 T
 1 10 Q
-( 28 November 1994) 252 59.9 T
+( 1 February 1995) 252 59.9 T
 54 87.98 504 720 R
 7 X
 V
@@ -1574,7 +1578,7 @@ N
 V
 1 10 Q
 0 X
-(28 November 1994) 309 59.9 T
+(1 February 1995) 309 59.9 T
 2 12 Q
 (5) 552 59.9 T
 108 87.98 558 720 R
@@ -1697,7 +1701,7 @@ V
 0 X
 (6) 54 59.9 T
 1 10 Q
-( 28 November 1994) 252 59.9 T
+( 1 February 1995) 252 59.9 T
 54 87.98 504 720 R
 7 X
 V
@@ -1733,7 +1737,7 @@ N
 V
 1 10 Q
 0 X
-(28 November 1994) 309 59.9 T
+(1 February 1995) 309 59.9 T
 2 12 Q
 (7) 552 59.9 T
 108 87.98 558 720 R
@@ -1873,7 +1877,7 @@ V
 0 X
 (8) 54 59.9 T
 1 10 Q
-( 28 November 1994) 252 59.9 T
+( 1 February 1995) 252 59.9 T
 54 87.98 504 720 R
 7 X
 V
@@ -1908,7 +1912,7 @@ N
 V
 1 10 Q
 0 X
-(28 November 1994) 309 59.9 T
+(1 February 1995) 309 59.9 T
 2 12 Q
 (9) 552 59.9 T
 108 87.98 558 720 R
@@ -2075,7 +2079,7 @@ V
 0 X
 (10) 54 59.9 T
 1 10 Q
-( 28 November 1994) 252 59.9 T
+( 1 February 1995) 252 59.9 T
 54 87.98 504 720 R
 7 X
 V
@@ -2173,7 +2177,7 @@ N
 V
 1 10 Q
 0 X
-(28 November 1994) 309 59.9 T
+(1 February 1995) 309 59.9 T
 2 12 Q
 (11) 546.01 59.9 T
 108 87.98 558 720 R
@@ -2293,7 +2297,7 @@ V
 0 X
 (12) 54 59.9 T
 1 10 Q
-( 28 November 1994) 252 59.9 T
+( 1 February 1995) 252 59.9 T
 54 87.98 504 720 R
 7 X
 V
@@ -2389,7 +2393,7 @@ N
 V
 1 10 Q
 0 X
-(28 November 1994) 309 59.9 T
+(1 February 1995) 309 59.9 T
 2 12 Q
 (13) 546.01 59.9 T
 108 87.98 558 720 R
@@ -2536,7 +2540,7 @@ V
 0 X
 (14) 54 59.9 T
 1 10 Q
-( 28 November 1994) 252 59.9 T
+( 1 February 1995) 252 59.9 T
 54 87.98 504 720 R
 7 X
 V
@@ -2605,7 +2609,7 @@ N
 V
 1 10 Q
 0 X
-(28 November 1994) 309 59.9 T
+(1 February 1995) 309 59.9 T
 2 12 Q
 (15) 546.01 59.9 T
 108 87.98 558 720 R
@@ -2759,7 +2763,7 @@ V
 0 X
 (16) 54 59.9 T
 1 10 Q
-( 28 November 1994) 252 59.9 T
+( 1 February 1995) 252 59.9 T
 54 87.98 504 720 R
 7 X
 V
@@ -2853,7 +2857,7 @@ N
 V
 1 10 Q
 0 X
-(28 November 1994) 309 59.9 T
+(1 February 1995) 309 59.9 T
 2 12 Q
 (17) 546.01 59.9 T
 108 87.98 558 720 R
@@ -3001,7 +3005,7 @@ V
 0 X
 (18) 54 59.9 T
 1 10 Q
-( 28 November 1994) 252 59.9 T
+( 1 February 1995) 252 59.9 T
 54 87.98 504 720 R
 7 X
 V
