@@ -19,6 +19,7 @@
 * EAM Apr 1994	- Version 2.0 release
 *		  TIFF output support in local.c
 *		  minor changes to fortran source to make IBM xlf compiler happy
+* EAM Feb 1995	- 2.03 fixes bug in CYL1 routine, and makes linux happy
 *
 *     This version does output through calls to an auxilliary routine
 *     local(), which is in the accompanying source file local.c 
@@ -376,10 +377,6 @@ C     INTEGER HEADER(8)
       CHARACTER*64 ARG1, ARG2, ARG3
       INTEGER      OTMODE
 *
-*     Keep track of actual coordinate limits (for information only)
-      REAL*4 TRULIM(3,2)
-      DATA TRULIM / 9999.,9999.,9999.,-9999.,-9999.,-9999. /
-*
 *     Copy of NOISE for ASSERT to see
       INTEGER ASSOUT
       COMMON /ASSCOM/ ASSOUT
@@ -388,6 +385,10 @@ C     INTEGER HEADER(8)
 *     The number of "details" each object type is supposed to have
 *     :       input,  object, shadow
       INTEGER IDET(MXTYPE),KDET(MXTYPE),SDET(MXTYPE)
+*
+*     Keep track of actual coordinate limits (for information only)
+      REAL*4 TRULIM(3,2)
+      DATA TRULIM / 9999.,9999.,9999.,-9999.,-9999.,-9999. /
 *
       IDET(TRIANG) = 12
       IDET(SPHERE) = 7
@@ -410,7 +411,7 @@ C     INTEGER HEADER(8)
 *
 *     Copy the info (also error reporting) unit number to common
       ASSOUT = NOISE
-      WRITE (NOISE,*) 'Raster3D rendering program V2.0 Apr 1994'
+      WRITE (NOISE,*) 'Raster3D rendering program V2.03 Mar 1995'
       WRITE (NOISE,*) 'If you publish figures generated by this ',
      &                'program please cite '
       WRITE (NOISE,*) 'Bacon & Anderson (1988) ',
@@ -2071,7 +2072,7 @@ C
 C Find Z coord of point on surface of cylinder with known X and Y coords
 C cylinder axis is X2 - X1, cylinder radius is R
 C Need to find Z coord ZB.
-C flag is 0 if cylinder had rounded ends, CYLFLAT if it has flat ends,
+C flag is 0 if cylinder had rounded ends, FLAT if it has flat ends,
 C Also find nearest point XYZA on cylinder axis.
 C
 	subroutine cyl1( flag,
@@ -2085,6 +2086,7 @@ c
 	REAL*4	ca,cb,cg,dx,dy,dz,d2
 	REAL*4	A0,A1,A2,Q
 	REAL*4	p1,r2,dx2,dy2
+	REAL*4	dd1,dd2
 c
 c	start with direction cosines * d2
 	ca = x2 - x1
@@ -2104,7 +2106,7 @@ c	use these to find coefficients of quadratic equation for ZB
 	A1 = -2.0 * (dy*cg*cb + dx*ca*cg)
 	A2 = ca*ca + cb*cb
 	Q  = A1*A1 - 4.0*A0*A2
-	if (Q .le. 0) then
+	if (Q .lt. 0) then
 		zb = -99999.
 		return
 	else
@@ -2116,16 +2118,22 @@ c	now find nearest point on cylinder axis
 c	p1 is fraction along axis from x1 to x2
 c	0 < p1 < 1 means point is on wall of cylinder
 c
-c	Patch required for DEC Fortran 3.1
-c	p1 = sqrt((dx2 + dy2 + dz*dz - r2) / d2 )
-	p1 = (dx2 + dy2 + dz*dz - r2) / d2
+	dd1 = dx2 + dy2 + dz*dz
+	dd2 = (x2-xb)**2 + (y2-yb)**2 + (z2-zb)**2
+c
+	p1 = (dd1 - r2) / d2
 	if (p1 .le. 0.0) then
      		p1 = 0.0
 	else
 		p1 = sqrt(p1)
 	end if
 c
-	if ((x2-xb)**2 + (y2-yb)**2 + (z2-zb)**2 .gt. d2 + r2) p1 = -p1
+c EAM	24-Feb-95 Fix bug which caused disappearance of cylinder ends as
+c	they tilted toward the viewer
+C 	if ((x2-xb)**2 + (y2-yb)**2 + (z2-zb)**2 .gt. d2 + r2) p1 = -p1
+c
+	if ((dd2 .gt. (d2+r2)) .and. (dd2 .gt. dd1)) p1 = -p1
+c
 	if (p1 .ge. 0 .and. p1 .le. 1.0) then
 		xa = p1*ca + x1
 		ya = p1*cb + y1
@@ -2150,8 +2158,8 @@ c
 	end if
 c
 c Rounded cylinder end
-c
-	if (flag .eq. 0) then
+c (ugly test - need to DEBUG with material props and flat/noflat)
+	if (and(flag,2) .eq. 0) then
 		if (dx2+dy2 .ge. r2) then
 			zb = -99999.
 		else
